# pyvicon-datatstream-module

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
examples/: vicon_position.py
lib_src/vicondatastream-1.11.0/Vicon/CrossMarket/DataStream/ViconCGStream/: ApexHaptics.h  ApplicationInfo.h  CameraCalibrationHealth.h  CameraCalibrationHealthDetail.h  CameraCalibrationInfo.h  CameraInfo.h  CameraSensorInfo.h  CameraTimingInfo.h  CameraWand2d.h  CameraWand2dDetail.h  CameraWand3d.h  CameraWand3dDetail.h  CentreOfPressureFrame.h  CentroidTracks.h  CentroidTracksDetail.h  CentroidWeights.h  Centroids.h  CentroidsDetail.h  ChannelInfo.h  Contents.h  DeviceInfo.h  EdgePairs.h  EdgePairsDetail.h  Enum.h  EyeTrackerFrame.h  EyeTrackerInfo.h  Filter.h  ForceFrame.h  ForcePlateInfo.h  FrameInfo.h  FrameRateInfo.h  GlobalSegments.h  GlobalSegmentsDetail.h  GreyscaleBlobs.h  GreyscaleBlobsDetail.h  GreyscaleSubsampledBlobs.h  HardwareFrameInfo.h  IsEqual.h  Item.h  KeepAlive.h  (+34 more)
lib_src/vicondatastream-1.11.0/Vicon/CrossMarket/DataStream/ViconCGStreamClient/: CGStreamPostalService.h  CGStreamReaderWriter.cpp  CGStreamReaderWriter.h  IViconCGStreamClientCallback.h  ViconCGStreamBayer.cpp  ViconCGStreamBayer.h  ViconCGStreamClient.cpp  ViconCGStreamClient.h
lib_src/vicondatastream-1.11.0/Vicon/CrossMarket/DataStream/ViconCGStreamClientSDK/: CGClient.cpp  CGClient.h  ICGClient.h  ICGFrameState.h
lib_src/vicondatastream-1.11.0/Vicon/CrossMarket/DataStream/ViconDataStreamSDKCore/: CoreClient.cpp  CoreClient.h  CoreClientTimingLog.cpp  CoreClientTimingLog.h  RetimerUtils.cpp  RetimerUtils.h  RetimingClient.cpp  RetimingClient.h  RetimingCore.cpp  RetimingCore.h  SegmentPoseReader.cpp  SegmentPoseReader.h  WirelessConfiguration.cpp  WirelessConfiguration.h
lib_src/vicondatastream-1.11.0/Vicon/CrossMarket/DataStream/ViconDataStreamSDKCoreUtils/: AxisMapping.cpp  AxisMapping.h  ClientUtils.cpp  ClientUtils.h  Constants.h
lib_src/vicondatastream-1.11.0/Vicon/CrossMarket/DataStream/ViconDataStreamSDK_C/: CClient.cpp  CClient.h  CRetimingClient.cpp  CRetimingClient.h  CTypeDefs.h  VersionInfoResource.rc2  ViconDataStreamSDK_C.rc
lib_src/vicondatastream-1.11.0/Vicon/CrossMarket/DataStream/ViconDataStreamSDK_CPP/: CoreAdapters.h  DataStreamClient.cpp  DataStreamClient.h  DataStreamRetimingClient.cpp  DataStreamRetimingClient.h  IDataStreamClientBase.h  StringFactory.h  VersionInfoResource.rc2
lib_src/vicondatastream-1.11.0/Vicon/CrossMarket/DataStream/ViconDataStreamSDK_CPPRetimerTest/: ViconDataStreamSDK_CPPRetimerTest.cpp
lib_src/vicondatastream-1.11.0/Vicon/CrossMarket/DataStream/ViconDataStreamSDK_CPPTest/: RetimingVisualiser.py  ViconDataStreamSDK_CPPTest.cpp
lib_src/vicondatastream-1.11.0/Vicon/CrossMarket/DataStream/ViconDataStreamSDK_CTest/: ViconDataStreamSDK_CTest.c
lib_src/vicondatastream-1.11.0/Vicon/CrossMarket/StreamCommon/: Buffer.h  BufferDetail.h  BufferImpl.h  CGStreamAsyncReaderWriter.cpp  CGStreamAsyncReaderWriter.h  Type.h
pyvicon_datastream/: __init__.py  pyvicon_datastream.py  pyvicon_datastream_wrapper.cpp  tools.py
test/: test.py
